v0.7.0, 2019-10-?? -- fall cleaning
 * removed the following deprecated code:
   * useless local_tmp_dir arg to GCSFilesystem
   * --steps switch from MRJobs
     * use --help -v to see help for --mapper etc.
   * steps_python_bin option
   * interpreter and steps_interpreter options
     * removed mr_wc.rb from examples
   * --archive, --dir, --file, --hadoop-arg, --libjar, --py-file, --spark-arg
   * removed MRJob.parse_output_line()
   * removed runner.stream_output()
   * optparse simulation:
     * add_file_option()
     * add_passthrough_option()
     * configure_options()
     * load_options()
     * pass_through_option()
     * self.args
     * self.OPTION_CLASS
     * mrjob.util.parse_and_save_options()
   * file_upload_args kwarg to runner constructor
   * max_hours_idle and mins_to_end_of_hour options
   * visible_to_all_users opt
   * mrjob.util.read_file() and mrjob.util.read_input()
   * emr_api_params opt


v0.6.12, 2019-10-23 -- unbreak Google
 * default image_version on Dataproc is now 1.3 (#2110)
 * local filesystem can now handle file:// URIs (#1986)
   * sim runners accept file:// URIs as input files, upload files/archives

v0.6.11, 2019-10-07 -- Spark log parsing
 * Python 3.4 is again supported, except for Google libraries (#2090)
 * can intermix positional (input file) args to MRJobs on Python 3.7 (#1701)
 * all runners
   * can parse logs to find cause of error in Spark (#2056)
 * EMR runner
   * retrying on transient API errors now works with pagination (#2005)
   * default image_version (AMI) is now 5.27.0 (#2105)
   * restored m4.large as default instance type for pre-5.13.0 AMIs (#2098)
   * can override emr_configurations with !clear or by Classification (#2097)
 * Spark runner
   * can run scripts with spark-submit without pyspark in $PYTHONPATH (#2091)

v0.6.10, 2019-07-19 -- official PyPy support
 * officially support PyPy (#1011)
   * when launched in PyPy, defaults python_bin to pypy or pypy3
 * Spark runner