@@ -1,6 +1,7 @@
 v0.7.0, 2019-10-?? -- fall cleaning
  * removed the following deprecated code:
    * useless local_tmp_dir arg to GCSFilesystem
+   * chunk_size arg to GCSFilesystem.put()
    * --steps switch from MRJobs
      * use --help -v to see help for --mapper etc.
    * steps_python_bin option
